--- a/src/conf/application.conf
+++ b/src/conf/application.conf
@@ -83,6 +83,9 @@ date.format=yyyy-MM-dd
 #   - mem : for a transient in memory database (H2 in memory)
 #   - fs  : for a simple file written database (H2 file stored)
 db.default=mem
+db.url=jdbc:h2:mem:play;MODE=PostgreSQL;LOCK_MODE=0
+evolutions.enabled=false
+
 #
 # To connect to a local MySQL5 database, use:
 # db.default=mysql://user:pwd@host/database
