--- a/projects/web/conf/application.conf
+++ b/projects/web/conf/application.conf
@@ -1,6 +1,6 @@
 # This is the main configuration file for the application.
 # ~~~~~
-application.name=BionimbuzWeb
+application.name=bionimbuz-web
 
 # Application mode
 # ~~~~~
