--- a/projects/plugins/api-plugin/pom.xml
+++ b/projects/plugins/api-plugin/pom.xml
@@ -4,19 +4,18 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>br.unb.cic.bionimbuz</groupId>
-    <artifactId>plugin-google</artifactId>
+    <artifactId>api-plugin</artifactId>
     <version>0.1</version>
-    <name>plugin-google</name>
+    <name>api-plugin</name>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>1.5.6.RELEASE</version>
     </parent>
-
+    
     <properties>
         <java.version>1.8</java.version>
-        <jclouds.version>2.0.2</jclouds.version>
     </properties>
     
     <dependencies>
@@ -35,27 +34,38 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.apache.jclouds</groupId>
-            <artifactId>jclouds-all</artifactId>
-            <version>${jclouds.version}</version>
-        </dependency>
-        <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.4</version>
         </dependency>
-        <dependency>
-            <groupId>br.unb.cic.bionimbuz</groupId>
-            <artifactId>api-plugin</artifactId>
-            <version>0.1</version>
-        </dependency>
     </dependencies>
-    
+
     <build>
         <plugins>
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
@@ -66,12 +76,5 @@
             <url>https://repo.spring.io/libs-release</url>
         </repository>
     </repositories>
-    
-    <pluginRepositories>
-        <pluginRepository>
-            <id>spring-releases</id>
-            <url>https://repo.spring.io/libs-release</url>
-        </pluginRepository>
-    </pluginRepositories>
     
 </project>
