--- a/projects/plugins/plugin-google/pom.xml
+++ b/projects/plugins/plugin-google/pom.xml
@@ -49,6 +49,11 @@
             <artifactId>api-plugin</artifactId>
             <version>0.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency>
     </dependencies>
     
     <build>
