--- a/projects/plugins/api-plugin/pom.xml
+++ b/projects/plugins/api-plugin/pom.xml
@@ -32,6 +32,11 @@
             <groupId>com.jayway.jsonpath</groupId>
             <artifactId>json-path</artifactId>
             <scope>test</scope>
+        </dependency>        
+        <dependency>
+            <groupId>org.apache.jclouds</groupId>
+            <artifactId>jclouds-all</artifactId>
+            <version>2.0.2</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
