--- a/projects/plugins/plugin-google/pom.xml
+++ b/projects/plugins/plugin-google/pom.xml
@@ -16,7 +16,6 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <jclouds.version>2.0.2</jclouds.version>
     </properties>
     
     <dependencies>
@@ -37,7 +36,7 @@
         <dependency>
             <groupId>org.apache.jclouds</groupId>
             <artifactId>jclouds-all</artifactId>
-            <version>${jclouds.version}</version>
+            <version>2.0.2</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
