--- a/projects/web/conf/application.conf
+++ b/projects/web/conf/application.conf
@@ -1,6 +1,7 @@
 # This is the main configuration file for the application.
 # ~~~~~
 application.name=bionimbuz-web
+crud.pageSize=15
 
 # Application mode
 # ~~~~~
