New file field to save file metadata

--- a/projects/web/conf/application.conf
+++ b/projects/web/conf/application.conf
@@ -86,7 +86,16 @@ date.format.en=yyyy/MM/dd
 # To quickly set up a development database, use either:
 #   - mem : for a transient in memory database (H2 in memory)
 #   - fs  : for a simple file written database (H2 file stored)
-db.default=mem
+# Steps for accessing in-memory database:
+# 1 - Access: localhost:<app-port>/@db
+# 2 - Put the following settings:
+#   > Saved Settings: Generic H2 (Server)
+#   > Driver Class: org.h2.Driver
+#   > JDBC URL: jdbc:h2:mem:play
+#   > User Name: sa
+#   > Password: <blank>
+# 3 - Click "Connect"
+db.default=fs
 db.url=jdbc:h2:mem:play;MODE=PostgreSQL;LOCK_MODE=0
 evolutions.enabled=false
 
