--- a/projects/web/conf/dependencies.yml
+++ b/projects/web/conf/dependencies.yml
@@ -5,6 +5,8 @@ require:
     - play -> crud
     - play -> secure
     - br.unb.cic.bionimbuz -> api-rest-plugin 0.1
+    - com.squareup.retrofit2 -> retrofit 2.3.0
+    - com.squareup.retrofit2 -> converter-gson 2.3.0
 
 repositories:
 - custom-modules:
