Implemented access control for menus

--- a/projects/web/conf/application.conf
+++ b/projects/web/conf/application.conf
@@ -75,7 +75,7 @@ date.format.en=yyyy/MM/dd
 # ~~~~~
 # Specify log level for your application.
 # If you want a very customized log, create a log4j.properties file in the conf directory
-# application.log=INFO
+application.log=DEBUG
 #
 # More logging configuration
 # application.log.path=/log4j.properties
@@ -138,7 +138,7 @@ evolutions.enabled=false
 # jpa.default.ddl=update
 #
 # Debug SQL statements (logged using DEBUG level):
-# jpa.default.debugSQL=true
+jpa.default.debugSQL=true
 #
 # You can even specify additional hibernate properties here:
 # default.hibernate.use_sql_comments=true
