--- a/projects/web/conf/application.conf
+++ b/projects/web/conf/application.conf
@@ -97,9 +97,11 @@ application.log=DEBUG
 #   > User Name: sa
 #   > Password: <blank>
 # 3 - Click "Connect"
-db.default=fs
+#db=mem
 db.url=jdbc:h2:mem:play;MODE=PostgreSQL;LOCK_MODE=0
 evolutions.enabled=false
+evolutions.autocommit=false
+modules.evolutions.enabled=false
 
 #
 # To connect to a local MySQL5 database, use:
