Initial data moved to script

--- a/projects/web/conf/application.conf
+++ b/projects/web/conf/application.conf
@@ -97,11 +97,11 @@ application.log=DEBUG
 #   > User Name: sa
 #   > Password: <blank>
 # 3 - Click "Connect"
-#db=mem
+db=mem
 db.url=jdbc:h2:mem:play;MODE=PostgreSQL;LOCK_MODE=0
-evolutions.enabled=false
-evolutions.autocommit=false
-modules.evolutions.enabled=false
+evolutions.enabled=true
+evolutions.autocommit=true
+modules.evolutions.enabled=true
 
 #
 # To connect to a local MySQL5 database, use:
