--- a/projects/plugins/plugin-gcp/pom.xml
+++ b/projects/plugins/plugin-gcp/pom.xml
@@ -36,7 +36,7 @@
         <dependency>
             <groupId>org.apache.jclouds</groupId>
             <artifactId>jclouds-all</artifactId>
-            <version>2.1.0</version>
+            <version>2.2.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
