--- a/projects/web/conf/dependencies.yml
+++ b/projects/web/conf/dependencies.yml
@@ -7,7 +7,7 @@ require:
     - br.unb.cic.bionimbuz -> api-rest-plugin 0.1
     - com.squareup.retrofit2 -> retrofit 2.3.0
     - com.squareup.retrofit2 -> converter-jackson 2.3.0
-    - org.apache.jclouds -> jclouds-all 2.0.2
+    - org.apache.jclouds -> jclouds-all 2.2.0-SNAPSHOT
     - com.google.code.gson -> gson 2.5:
         force: true
     - com.google.guava -> guava 18.0
