--- a/projects/web/conf/application.conf
+++ b/projects/web/conf/application.conf
@@ -99,9 +99,9 @@ application.log=DEBUG
 # 3 - Click "Connect"
 db=mem
 db.url=jdbc:h2:mem:play;MODE=PostgreSQL;LOCK_MODE=0
-evolutions.enabled=true
-evolutions.autocommit=true
-modules.evolutions.enabled=true
+evolutions.enabled=false
+evolutions.autocommit=false
+modules.evolutions.enabled=false
 
 #
 # To connect to a local MySQL5 database, use:
