Initial suport to local-machine plugin

--- a/projects/plugins/plugin-local/config/application.properties
+++ b/projects/plugins/plugin-local/config/application.properties
@@ -3,6 +3,7 @@ server.port=8282
 
 system.mem=8
 system.cpu=4
+system.ip=127.0.0.1
 
 ## MULTIPART (MultipartProperties)
 # Enable multipart uploads
