--- a/projects/plugins/plugin-local/src/main/resources/application.properties
+++ b/projects/plugins/plugin-local/src/main/resources/application.properties
@@ -4,3 +4,7 @@ logging.level.org.springframework.web= ERROR
 logging.level.org.hibernate= DEBUG
 
 server.port=8282
+
+system.mem=8
+system.cpu=4
+system.ip=127.0.0.1
