Reading properties of springboot

--- a/projects/plugins/plugin-local/src/main/resources/application.properties
+++ b/projects/plugins/plugin-local/src/main/resources/application.properties
@@ -5,6 +5,6 @@ logging.level.org.hibernate= DEBUG
 
 server.port=8282
 
-system.mem=8
-system.cpu=4
-system.ip=127.0.0.1
+application.system.mem=8
+application.system.cpu=4
+application.system.ip=127.0.0.1
