--- a/projects/coordinators/executor-coordinator/pom.xml
+++ b/projects/coordinators/executor-coordinator/pom.xml
@@ -4,7 +4,7 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>br.unb.cic.bionimbuz</groupId>
+    <groupId>br.unb.cic.bionimbuz.coordinators</groupId>
     <artifactId>executor-coordinator</artifactId>
     <name>executor-coordinator</name>
     <version>0.1</version>
@@ -28,6 +28,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>br.unb.cic.bionimbuz</groupId>
+            <artifactId>api-rest-executor</artifactId>
+            <version>0.1</version>
         </dependency>
     </dependencies>
 
