--- a/projects/plugins/api-rest-plugin/pom.xml
+++ b/projects/plugins/api-rest-plugin/pom.xml
@@ -3,7 +3,7 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>br.unb.cic.bionimbuz</groupId>
+    <groupId>br.unb.cic.bionimbuz.plugins</groupId>
     <artifactId>api-rest-plugin</artifactId>
     <name>api-rest-plugin</name>
     <version>0.1</version>
@@ -57,6 +57,11 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>18.0</version>
+        </dependency>
+        <dependency>
+            <groupId>br.unb.cic.bionimbuz</groupId>
+            <artifactId>api-commons</artifactId>
+            <version>0.1</version>
         </dependency>
     </dependencies>
 
