--- a/projects/plugins/plugin-local/pom.xml
+++ b/projects/plugins/plugin-local/pom.xml
@@ -4,7 +4,7 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>br.unb.cic.bionimbuz</groupId>
+    <groupId>br.unb.cic.bionimbuz.plugins</groupId>
     <artifactId>plugin-local</artifactId>
     <name>plugin-local</name>
     <version>0.1</version>
