--- a/projects/coordinators/api-rest-executor/pom.xml
+++ b/projects/coordinators/api-rest-executor/pom.xml
@@ -54,7 +54,7 @@
             <version>18.0</version>
         </dependency>
         <dependency>
-            <groupId>br.unb.cic.bionimbuz</groupId>
+            <groupId>br.unb.cic.bionimbuz.commons</groupId>
             <artifactId>api-commons</artifactId>
             <version>0.1</version>
         </dependency>
