--- a/projects/coordinators/executor-coordinator/pom.xml
+++ b/projects/coordinators/executor-coordinator/pom.xml
@@ -30,7 +30,7 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>br.unb.cic.bionimbuz</groupId>
+            <groupId>br.unb.cic.bionimbuz.coordinators</groupId>
             <artifactId>api-rest-executor</artifactId>
             <version>0.1</version>
         </dependency>
