--- a/projects/plugins/plugin-gcp/pom.xml
+++ b/projects/plugins/plugin-gcp/pom.xml
@@ -50,7 +50,7 @@
             <version>18.0</version>
         </dependency>
         <dependency>
-            <groupId>br.unb.cic.bionimbuz</groupId>
+            <groupId>br.unb.cic.bionimbuz.plugins</groupId>
             <artifactId>api-rest-plugin</artifactId>
             <version>0.1</version>
         </dependency>
