--- a/projects/plugins/plugin-gcp/pom.xml
+++ b/projects/plugins/plugin-gcp/pom.xml
@@ -17,6 +17,7 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <jclouds.version>2.2.0-SNAPSHOT</jclouds.version>
     </properties>
 
     <dependencies>
@@ -35,11 +36,6 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.apache.jclouds</groupId>
-            <artifactId>jclouds-all</artifactId>
-            <version>2.2.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.5</version>
@@ -49,6 +45,13 @@
             <artifactId>guava</artifactId>
             <version>18.0</version>
         </dependency>
+        <!-- ########## JClouds dependencies  ########## -->
+        <dependency>
+            <groupId>org.apache.jclouds.provider</groupId>
+            <artifactId>google-cloud-storage</artifactId>
+            <version>${jclouds.version}</version>
+        </dependency>
+        <!-- ##################################################  -->
         <dependency>
             <groupId>br.unb.cic.bionimbuz.plugins</groupId>
             <artifactId>api-rest-plugin</artifactId>
@@ -67,16 +70,16 @@
 
     <repositories>
         <repository>
+            <id>jclouds-snapshots</id>
+            <url>https://repository.apache.org/content/repositories/snapshots</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
             <id>spring-releases</id>
             <url>https://repo.spring.io/libs-release</url>
         </repository>
     </repositories>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>spring-releases</id>
-            <url>https://repo.spring.io/libs-release</url>
-        </pluginRepository>
-    </pluginRepositories>
 
 </project>
