--- a/projects/web/conf/application.conf
+++ b/projects/web/conf/application.conf
@@ -137,7 +137,8 @@ modules.evolutions.enabled=false
 #
 # Specify the ddl generation pattern to use. Set to none to disable it 
 # (default to update in DEV mode, and none in PROD mode):
-# jpa.default.ddl=update
+jpa.default.ddl=create
+%prod.jpa.default.ddl=update
 #
 # Debug SQL statements (logged using DEBUG level):
 jpa.default.debugSQL=true
