Fault Tolerance integration; Adding Log4j Configuration

--- a/projects/plugins/api-rest-plugin/pom.xml
+++ b/projects/plugins/api-rest-plugin/pom.xml
@@ -88,6 +88,11 @@
             <artifactId>api-commons</artifactId>
             <version>0.1</version>
         </dependency>
+        <dependency>
+            <groupId>br.unb.cic.ft4j</groupId>
+            <artifactId>ft-module</artifactId>
+            <version>0.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -95,8 +100,8 @@
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
             <plugin>
