--- a/projects/web/.gitignore
+++ b/projects/web/.gitignore
@@ -10,5 +10,48 @@
 /logs/
 /ft4j-aux-path/
 /conf/credentials/
-
 /server.pid
+/lib/android-4.1.1.4.jar
+/lib/animal-sniffer-annotations-1.14.jar
+/lib/aopalliance-1.0.jar
+/lib/api-commons-0.1.jar
+/lib/api-rest-plugin-0.1.jar
+/lib/asm-3.1.jar
+/lib/auto-common-0.3.jar
+/lib/auto-service-1.0-rc3.jar
+/lib/auto-value-1.4.1.jar
+/lib/aws-ec2-2.2.0-SNAPSHOT.jar
+/lib/bcprov-ext-jdk15on-1.51.jar
+/lib/cglib-2.2.1-v20090111.jar
+/lib/converter-jackson-2.3.0.jar
+/lib/error_prone_annotations-2.1.0.jar
+/lib/google-compute-engine-2.2.0-SNAPSHOT.jar
+/lib/googlecloud-2.2.0-SNAPSHOT.jar
+/lib/gson-2.5.jar
+/lib/guava-18.0.jar
+/lib/guice-3.0.jar
+/lib/guice-assistedinject-3.0.jar
+/lib/httpclient-4.0.1.jar
+/lib/httpcore-4.0.1.jar
+/lib/jackson-annotations-2.7.0.jar
+/lib/jackson-core-2.7.2.jar
+/lib/jackson-databind-2.7.2.jar
+/lib/javax.ws.rs-api-2.0.1.jar
+/lib/jclouds-bouncycastle-2.2.0-SNAPSHOT.jar
+/lib/jclouds-compute-2.2.0-SNAPSHOT.jar
+/lib/jclouds-core-2.2.0-SNAPSHOT.jar
+/lib/jclouds-scriptbuilder-2.2.0-SNAPSHOT.jar
+/lib/json-20080701.jar
+/lib/jsr250-api-1.0.jar
+/lib/jsr305-3.0.2.jar
+/lib/oauth-2.2.0-SNAPSHOT.jar
+/lib/okhttp-3.8.0.jar
+/lib/okio-1.13.0.jar
+/lib/opengl-api-gl1.1-android-2.1_r1.jar
+/lib/org.osgi.compendium-4.2.0.jar
+/lib/org.osgi.core-4.2.0.jar
+/lib/retrofit-2.3.0.jar
+/lib/xmlParserAPIs-2.6.2.jar
+/lib/xpp3-1.1.4c.jar
+/lib/sts-2.2.0-SNAPSHOT.jar
+/lib/ec2-2.2.0-SNAPSHOT.jar
