--- a/projects/plugins/plugin-gcp/src/main/resources/log4j.properties
+++ b/projects/plugins/plugin-gcp/src/main/resources/log4j.properties
@@ -7,7 +7,7 @@ log4j.rootLogger=INFO, fileInfo
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{hh:mm:ss} - %5p - %m%n
+log4j.appender.stdout.layout.ConversionPattern=%d{HH:mm:ss} - %5p - %m%n
 log4j.appender.stdout.Threshold=DEBUG
 
 # 
@@ -24,7 +24,7 @@ log4j.appender.fileInfo.File=logs/system.log
 log4j.appender.fileInfo.MaxFileSize=10MB
 log4j.appender.fileInfo.MaxBackupIndex=10
 log4j.appender.fileInfo.layout=org.apache.log4j.PatternLayout
-log4j.appender.fileInfo.layout.ConversionPattern=%d{hh:mm:ss} - %5p - %m%n
+log4j.appender.fileInfo.layout.ConversionPattern=%d{HH:mm:ss} - %5p - %m%n
 log4j.appender.fileInfo.Threshold=INFO
 
 #log4j.logger.fileError=ERROR, fileError
