--- a/projects/web/.gitignore
+++ b/projects/web/.gitignore
@@ -11,11 +11,10 @@
 /ft4j-aux-path/
 /conf/credentials/
 /server.pid
+/lib/classmate-1.4.0.jar
 /lib/android-4.1.1.4.jar
 /lib/animal-sniffer-annotations-1.14.jar
 /lib/aopalliance-1.0.jar
-/lib/api-commons-0.1.jar
-/lib/api-rest-plugin-0.1.jar
 /lib/asm-3.1.jar
 /lib/auto-common-0.3.jar
 /lib/auto-service-1.0-rc3.jar
