--- a/projects/plugins/plugin-local/src/main/resources/application.properties
+++ b/projects/plugins/plugin-local/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 logging.level.root= WARN
-logging.level.org.springframework.security= DEBUG
-logging.level.org.springframework.web= ERROR
-logging.level.org.hibernate= DEBUG
+spring.jpa.properties.hibernate.generate_statistics=false
+spring.jpa.properties.hibernate.show_sql=false
 
 server.port=8282
 
