Space sharing with groups

--- a/projects/web/conf/application.conf
+++ b/projects/web/conf/application.conf
@@ -39,7 +39,7 @@ default.lang=en
 # Date format
 # ~~~~~
 date.format=dd/MM/yyyy
-date.format.en=yyyy/MM/dd
+date.format.en=yyyy/MM/dd HH:mm
 # date.format.fr=dd/MM/yyyy
 
 # Server configuration
