Dinamic input/output screen

--- a/projects/web/conf/application.conf
+++ b/projects/web/conf/application.conf
@@ -45,7 +45,8 @@ date.format.en=yyyy/MM/dd HH:mm
 # Server configuration
 # ~~~~~
 # If you need to change the HTTP port, uncomment this (default is set to 9000)
-# http.port=9000
+http.port=9000
+executor.port=8181
 #
 # By default the server listen for HTTP on the wildcard address.
 # You can restrict this.
