Fix execution job

--- a/projects/web/conf/application.conf
+++ b/projects/web/conf/application.conf
@@ -227,7 +227,7 @@ mail.smtp=mock
 # Jobs executor
 # ~~~~~~
 # Size of the Jobs pool
-# play.jobs.pool=10
+play.jobs.pool=10
 
 # Execution pool
 # ~~~~~
