Adding a fisical database; fix bugs.

--- a/projects/web/conf/application.conf
+++ b/projects/web/conf/application.conf
@@ -99,11 +99,11 @@ application.log=DEBUG
 #   > User Name: sa
 #   > Password: <blank>
 # 3 - Click "Connect"
-db=mem
-db.url=jdbc:h2:mem:play;MODE=PostgreSQL;LOCK_MODE=0
+#db=mem
+#db.url=jdbc:h2:mem:play;MODE=PostgreSQL;LOCK_MODE=0
 evolutions.enabled=false
-evolutions.autocommit=false
-modules.evolutions.enabled=false
+#evolutions.autocommit=false
+#modules.evolutions.enabled=false
 
 #
 # To connect to a local MySQL5 database, use:
@@ -113,15 +113,21 @@ modules.evolutions.enabled=false
 # db=postgres://user:pwd@host/database
 #
 # If you need a full JDBC configuration use the following :
-# db.default.url=jdbc:postgresql:database_name
-# db.default.driver=org.postgresql.Driver
-# db.default.user=root
-# db.default.pass=secret
+db.default.url=jdbc:postgresql://35.199.88.171:5432/dbbionimbuz
+db.default.driver=org.postgresql.Driver
+db.default.user=usrbionimbuz
+db.default.pass=usr_bionimbuz
+db.default.testquery=SELECT 1 FROM DUAL
 #
 # Connections pool configuration :
-# db.default.pool.timeout=1000
-# db.default.pool.maxSize=30
-# db.default.pool.minSize=10
+# DEV
+db.default.pool.timeout=20000
+db.default.pool.minSize=1
+db.default.pool.initialPoolSize=3
+db.default.pool.maxSize=7
+db.default.pool.maxIdleTimeExcessConnections=5
+db.default.pool.maxIdleTime=120
+
 #
 # If you want to reuse an existing Datasource from your application server, use:
 # db.default=java:/comp/env/jdbc/myDatasource
@@ -145,6 +151,7 @@ jpa.default.ddl=update
 #
 # Debug SQL statements (logged using DEBUG level):
 jpa.default.debugSQL=true
+
 #
 # You can even specify additional hibernate properties here:
 # default.hibernate.use_sql_comments=true
