Editing user data

--- a/projects/web/conf/application.conf
+++ b/projects/web/conf/application.conf
@@ -115,7 +115,7 @@ evolutions.enabled=false
 db.default.url=jdbc:postgresql://35.199.88.171:5432/dbbionimbuz
 db.default.driver=org.postgresql.Driver
 db.default.user=usrbionimbuz
-db.default.pass=usr_bionimbuz
+db.default.pass=
 db.default.testquery=SELECT 1 FROM DUAL
 #
 # Connections pool configuration :
