Setting log level to INFO

--- a/projects/plugins/plugin-aws/src/main/resources/application.properties
+++ b/projects/plugins/plugin-aws/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-logging.level.root= WARN
-logging.level.org.springframework.security= DEBUG
-logging.level.org.springframework.web= ERROR
-logging.level.org.hibernate= DEBUG
+logging.level.root=INFO
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=ERROR
+logging.level.org.hibernate=DEBUG
 
 server.port=8484
