--- a/projects/web/conf/application.conf
+++ b/projects/web/conf/application.conf
@@ -70,7 +70,7 @@ executor.port=8181
 # jpda.port=8000
 #
 # Java source level => 1.6, 1.7 or 1.8 (experimental)
-# java.source=1.6
+java.source=1.8
 
 # Log level
 # ~~~~~
@@ -145,7 +145,7 @@ db.default.pool.maxIdleTime=120
 # Specify the ddl generation pattern to use. Set to none to disable it 
 # (default to update in DEV mode, and none in PROD mode):
 # jpa.default.ddl=update
-jpa.default.ddl=update
+jpa.default.ddl=none
 
 #
 # Debug SQL statements (logged using DEBUG level):
