--- a/projects/plugins/plugin-local/src/main/resources/application.properties
+++ b/projects/plugins/plugin-local/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-logging.level.root= WARN
+logging.level.root=INFO
 spring.jpa.properties.hibernate.generate_statistics=false
 spring.jpa.properties.hibernate.show_sql=false
 
