--- a/projects/web/conf/application.conf
+++ b/projects/web/conf/application.conf
@@ -112,10 +112,10 @@ evolutions.enabled=false
 # db=postgres://user:pwd@host/database
 #
 # If you need a full JDBC configuration use the following :
-db.default.url=jdbc:postgresql://35.199.88.171:5432/dbbionimbuz
+db.default.url=jdbc:postgresql://localhost:5432/bnzdb
 db.default.driver=org.postgresql.Driver
-db.default.user=usrbionimbuz
-db.default.pass=
+db.default.user=bnzusr
+db.default.pass=bnzpass
 db.default.testquery=SELECT 1 FROM DUAL
 #
 # Connections pool configuration :
@@ -144,8 +144,8 @@ db.default.pool.maxIdleTime=120
 #
 # Specify the ddl generation pattern to use. Set to none to disable it 
 # (default to update in DEV mode, and none in PROD mode):
-# jpa.default.ddl=update
-jpa.default.ddl=none
+jpa.default.ddl=update
+#jpa.default.ddl=none
 
 #
 # Debug SQL statements (logged using DEBUG level):
