Update authorization, constants, Models, OpenStack controllers.

--- a/projects/web/conf/application.conf
+++ b/projects/web/conf/application.conf
@@ -112,7 +112,7 @@ evolutions.enabled=false
 # db=postgres://user:pwd@host/database
 #
 # If you need a full JDBC configuration use the following :
-db.default.url=jdbc:postgresql://localhost:5432/bnzdb
+db.default.url=jdbc:postgresql://127.0.0.1:5432/bnzdb
 db.default.driver=org.postgresql.Driver
 db.default.user=bnzusr
 db.default.pass=bnzpass
