--- a/projects/plugins/api-rest-plugin/pom.xml
+++ b/projects/plugins/api-rest-plugin/pom.xml
@@ -61,6 +61,18 @@
             <artifactId>google-compute-engine</artifactId>
             <version>${jclouds.version}</version>
         </dependency>
+
+        <!-- ########## OpenStack4j dependencies  ########## -->
+        <dependency>
+            <groupId>org.pacesys</groupId>
+            <artifactId>openstack4j-core</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.pacesys.openstack4j.connectors</groupId>
+            <artifactId>openstack4j-okhttp</artifactId>
+            <version>3.2.0</version>
+        </dependency>
         <!-- ##################################################  -->
 
         <dependency>
