--- a/projects/plugins/api-rest-plugin/pom.xml
+++ b/projects/plugins/api-rest-plugin/pom.xml
@@ -5,36 +5,40 @@
 
     <groupId>br.unb.cic.bionimbuz.plugins</groupId>
     <artifactId>api-rest-plugin</artifactId>
-    <name>api-rest-plugin</name>
     <version>0.1</version>
-
+    
+    <name>api-rest-plugin</name>  
+     
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.6.RELEASE</version>
+        <version>2.1.6.RELEASE</version>
     </parent>
-
+    
     <properties>
-        <java.version>1.8</java.version>
-        <jclouds.version>2.2.0-SNAPSHOT</jclouds.version>
+        <maven.test.skip>true</maven.test.skip>
+        <java.version>11</java.version>
+        <jclouds.version>2.1.2</jclouds.version>
+        <api-commons.version>0.1</api-commons.version>
     </properties>
-
-    <dependencies>
+    
+    <dependencies>    
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
+            <groupId>br.unb.cic.bionimbuz.commons</groupId>
+            <artifactId>api-commons</artifactId>
+            <version>${api-commons.version}</version>
+            <type>pom</type>
+        </dependency>        
+        <dependency>
+            <groupId>br.unb.cic.bionimbuz.commons</groupId>
+            <artifactId>api-commons</artifactId>
+            <version>${api-commons.version}</version>
+        </dependency>        
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>com.jayway.jsonpath</groupId>
-            <artifactId>json-path</artifactId>
-            <scope>test</scope>
-        </dependency>
-
         <!-- ########## JClouds dependencies  ########## -->
         <dependency>
             <groupId>org.apache.jclouds</groupId>
@@ -62,76 +66,6 @@
             <version>${jclouds.version}</version>
         </dependency>
         <!-- ##################################################  -->
-
-        <dependency>
-            <groupId>com.squareup.retrofit2</groupId>
-            <artifactId>retrofit</artifactId>
-            <version>2.3.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.squareup.retrofit2</groupId>
-            <artifactId>converter-jackson</artifactId>
-            <version>2.3.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.5</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>18.0</version>
-        </dependency>
-        <dependency>
-            <groupId>br.unb.cic.bionimbuz.commons</groupId>
-            <artifactId>api-commons</artifactId>
-            <version>0.1</version>
-        </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <configuration>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
-                </configuration>
-
-                <executions>
-                    <execution>
-                        <id>make-assembly</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
-
-    <repositories>
-        <repository>
-            <id>jclouds-snapshots</id>
-            <url>https://repository.apache.org/content/repositories/snapshots</url>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-        <repository>
-            <id>spring-releases</id>
-            <url>https://repo.spring.io/libs-release</url>
-        </repository>
-    </repositories>
 
 </project>
