--- a/projects/plugins/plugin-local/pom.xml
+++ b/projects/plugins/plugin-local/pom.xml
@@ -1,43 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
+    
     <groupId>br.unb.cic.bionimbuz.plugins</groupId>
     <artifactId>plugin-local</artifactId>
-    <name>plugin-local</name>
     <version>0.1</version>
-
+    
+    <name>api-rest-plugin</name>  
+     
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.6.RELEASE</version>
+        <version>2.1.6.RELEASE</version>
     </parent>
-
+    
     <properties>
-        <java.version>1.8</java.version>
+        <maven.test.skip>true</maven.test.skip>
+        <java.version>11</java.version>
+        <api-rest-plugin.version>0.1</api-rest-plugin.version>
     </properties>
 
-    <dependencies>
+    <dependencies>  
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
+            <groupId>br.unb.cic.bionimbuz.plugins</groupId>
+            <artifactId>api-rest-plugin</artifactId>
+            <version>${api-rest-plugin.version}</version>
+            <type>pom</type>
+        </dependency>        
+        <dependency>
+            <groupId>br.unb.cic.bionimbuz.plugins</groupId>
+            <artifactId>api-rest-plugin</artifactId>
+            <version>${api-rest-plugin.version}</version>
+        </dependency>        
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>br.unb.cic.bionimbuz.commons</groupId>
-            <artifactId>api-commons</artifactId>
-            <version>0.1</version>
-        </dependency>
-        <dependency>
-            <groupId>br.unb.cic.bionimbuz.plugins</groupId>
-            <artifactId>api-rest-plugin</artifactId>
-            <version>0.1</version>
         </dependency>
     </dependencies>
 
@@ -49,19 +48,5 @@
             </plugin>
         </plugins>
     </build>
-
-    <repositories>
-        <repository>
-            <id>spring-releases</id>
-            <url>https://repo.spring.io/libs-release</url>
-        </repository>
-    </repositories>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>spring-releases</id>
-            <url>https://repo.spring.io/libs-release</url>
-        </pluginRepository>
-    </pluginRepositories>
 
 </project>
