--- a/projects/coordinators/task-executor/pom.xml
+++ b/projects/coordinators/task-executor/pom.xml
@@ -3,10 +3,10 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <name>api-rest-executor</name>
+    <name>task-executor</name>
     
     <groupId>br.unb.cic.bionimbuz.coordinators</groupId>
-    <artifactId>api-rest-executor</artifactId>
+    <artifactId>task-executor</artifactId>
     <version>0.1</version>
 
     <parent>
@@ -14,24 +14,24 @@
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.1.6.RELEASE</version>
     </parent>
-    
+
     <properties>
         <maven.test.skip>true</maven.test.skip>
         <java.version>11</java.version>
-        <api-commons.version>0.1</api-commons.version>
+        <api-rest-task-executor.version>0.1</api-rest-task-executor.version>
     </properties>
 
     <dependencies>
         <dependency>
-            <groupId>br.unb.cic.bionimbuz.commons</groupId>
-            <artifactId>api-commons</artifactId>
-            <version>${api-commons.version}</version>
+            <groupId>br.unb.cic.bionimbuz.coordinators</groupId>
+            <artifactId>api-rest-task-executor</artifactId>
+            <version>${api-rest-task-executor.version}</version>
             <type>pom</type>
         </dependency>        
         <dependency>
-            <groupId>br.unb.cic.bionimbuz.commons</groupId>
-            <artifactId>api-commons</artifactId>
-            <version>${api-commons.version}</version>
+            <groupId>br.unb.cic.bionimbuz.coordinators</groupId>
+            <artifactId>api-rest-task-executor</artifactId>
+            <version>${api-rest-task-executor.version}</version>
         </dependency>        
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -39,5 +39,14 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
