--- a/projects/web/conf/dependencies.yml
+++ b/projects/web/conf/dependencies.yml
@@ -6,7 +6,7 @@ require:
     - play -> secure
     - br.unb.cic.bionimbuz.commons -> api-commons 0.1
     - br.unb.cic.bionimbuz.plugins -> api-rest-plugin 0.1
-    - br.unb.cic.bionimbuz.coordinators -> api-rest-executor 0.1    
+    - br.unb.cic.bionimbuz.coordinators -> api-rest-task-executor 0.1    
     
     - com.squareup.retrofit2 -> retrofit 2.6.0
     - com.squareup.retrofit2 -> converter-jackson 2.6.0
