Scripts de criação de banco de dados

--- a/projects/web/conf/application.conf
+++ b/projects/web/conf/application.conf
@@ -116,7 +116,7 @@ db.default.url=jdbc:postgresql://localhost:5432/bnzdb
 db.default.driver=org.postgresql.Driver
 db.default.user=bnzusr
 db.default.pass=bnzpass
-db.default.testquery=SELECT 1 FROM DUAL
+db.default.testquery=SELECT 1
 #
 # Connections pool configuration :
 # DEV
@@ -144,8 +144,8 @@ db.default.pool.maxIdleTime=120
 #
 # Specify the ddl generation pattern to use. Set to none to disable it 
 # (default to update in DEV mode, and none in PROD mode):
-jpa.default.ddl=update
-#jpa.default.ddl=none
+#jpa.default.ddl=update
+jpa.default.ddl=none
 
 #
 # Debug SQL statements (logged using DEBUG level):
